# learn-data-engineering-zoomcamp

./: LICENSE  README.md  pyproject.toml
01-docker-terraform/docker/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py
01-docker-terraform/terraform/: README.md
02-workflow-orchestration/: .env.example  .env.secrets.example  README.md  docker-compose.yml
02-workflow-orchestration/flows/: main_zoomcamp.00_environment_setup.yaml  main_zoomcamp.01_taxi_tripdata_pipeline.yaml  main_zoomcamp.02_taxi_zone_pipeline.yaml  main_zoomcamp.03_dashboard_views_pipeline.yaml  main_zoomcamp.99_monitoring_alerts.yaml
02-workflow-orchestration/scripts/: encode_secrets.sh
02-workflow-orchestration/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
homeworks/: hw-01-docker-terraform.md  hw-o1-docker-terraform.ipynb
