[project]
name = "learn-data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "pgcli>=4.5.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.50",
    "tqdm>=4.68.2",
]
